[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/DeliveryTarget/DeliveryTarget.gd" type="Script" id=1]
[ext_resource path="res://assets/house.png" type="Texture" id=2]
[ext_resource path="res://assets/balloon_happy.png" type="Texture" id=3]
[ext_resource path="res://assets/balloon_warning.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, -15.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "pickup"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="DeliveryTarget" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
anims/pickup = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="WarningBalloon" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 4 )
offset = Vector2( 0, -7 )

[node name="HappyBalloon" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 3 )
offset = Vector2( 0, -7 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
